--- a/test/index.html
+++ b/test/index.html
@@ -23,20 +23,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       WCT.loadSuites([
 
         //default page tests
-        'def-error.html?dom=shady',
-        'def-error.html?dom=shadow',
-        'def-account.html?dom=shady',
-        'def-account.html?dom=shadow',
+        //'def-error.html?dom=shady',
+        //'def-error.html?dom=shadow',
+        //'def-account.html?dom=shady',
+        //'def-account.html?dom=shadow',
+        //'def-login.html?dom=shady',
+        //'def-login.html?dom=shadow',
+        'def-home.html?dom=shady',
+        'def-home.html?dom=shadow',
         /*
         //app shell tests
         'my-app.html?dom=shady',
         'my-app.html?dom=shadow',
 
         //default page tests
-        'def-home.html?dom=shady',
-        'def-home.html?dom=shadow',
-        'def-login.html?dom=shady',
-        'def-login.html?dom=shadow',
+
         'def-verify.html?dom=shady',
         'def-verify.html?dom=shadow',
 
